--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+changes < 1.0.0
 coverage < 4.0.0
 cssselect < 1.0.0
 lxml < 4.0.0 
@@ -9,5 +10,6 @@ pinocchio < 1.0.0
 Sphinx >= 1.1.0, < 2.0.0
 sphinx-bootstrap-theme < 1.0.0
 sphinxcontrib-httpdomain < 2.0.0
+testtube < 1.0.0
 tox < 2.0.0
 unittest2 < 1.0.0
