--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,15 @@
 language: python
+
 python:
     - "2.6"
     - "2.7"
     - "pypy"
+
 install:
     - pip install -r requirements.txt --use-mirrors
+
 script:
     - nosetests --with-coverage --cover-package=datalogy
+
+after_success:
+  - coveralls
