--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ nosexcover < 2.0.0
 flake8 < 3.0.0
 pinocchio < 1.0.0
 python-coveralls < 3.0.0
+pyquery < 2.0.0
 Sphinx >= 1.1.0, < 2.0.0
 sphinx-bootstrap-theme < 1.0.0
 sphinxcontrib-httpdomain < 2.0.0
